--- a/contents/projects/predict-demo/ai2.html
+++ b/contents/projects/predict-demo/ai2.html
@@ -336,13 +336,13 @@
     <h4>Defintions</h4>
   </center>
   <br>
-  <center>WIN includes OK win, TKO win and win on points, win by disqualification and win by retiring.</center>
+  <center><span style="color: blue;">WIN</span> includes OK win, TKO win, win on points, win by disqualification and win by retiring.</center>
   <br>
-  <center>DRAW includes Unanimous draw, Split draw and Majority draw.</center>
+  <center><span style="color: blue;">DRAW</span> includes Unanimous draw, Split draw and Majority draw.</center>
   <br>
-  <center>KO result includes KO and TKO</center>
+  <center><span style="color: blue;">KO result</span> includes KO and TKO</center>
   <br>
-  <center>Odds limits: Max odds: 99, Min odds: 1.01</center>
+  <center><span style="color: blue;">Odds limits</span>: Max odds: 99, Min odds: 1.01</center>
 
   <br> <br>
 </body>
