--- a/contents/projects/predict-demo/ai2.html
+++ b/contents/projects/predict-demo/ai2.html
@@ -333,7 +333,7 @@
   <!-- Definitions -->
 
   <center>
-    <h4>Defintions</h4>
+    <h4>Definitions</h4>
   </center>
   <br>
   <center><span style="color: blue;">WIN</span> includes OK win, TKO win, win on points, win by disqualification and win by retiring.</center>
