--- a/contents/projects/predict-demo/ai2.html
+++ b/contents/projects/predict-demo/ai2.html
@@ -68,16 +68,16 @@
 
       input_xs = tf.tensor2d([
         [
-          v01 / 7.6, 
-          v02 / 1.7, 
-          v03 / 0.3, 
-          v04 / 25.5, 
-          v05 / 0.4, 
-          v06 / 6.8, 
-          v07 / 8.5, 
-          v08 / 0.7, 
-          v09 / 27.8, 
-          v10 / 0.2        
+          v01 / 7.2, 
+          v02 / 5.1, 
+          v03 / 0.5, 
+          v04 / 26.7, 
+          v05 / 0.3, 
+          v06 / 7.2, 
+          v07 / 5.1, 
+          v08 / 0.5, 
+          v09 / 26.7, 
+          v10 / 0.3       
         ]
       ]);
       
@@ -193,10 +193,11 @@
   </div>
 
   <!-- CONTENT -->
+  <br>
+  <span style="color: gray;">ver. demo3-03.01</span>
 
-  <center> <br><br><br>
+  <center> <br><br>
     <h1>Odds Prediction</h1><br>
-    ver. demo3-03
   </center>
   
   <!-- Input -->
