--- a/projects.html
+++ b/projects.html
@@ -109,6 +109,7 @@
             Some of my AI, BI and Cloud projects.
           </blockquote>
 
+
           <a href="#Inventory Management">
             Inventory Management
           </a>  &emsp;
@@ -151,6 +152,9 @@
 
           <hr />
 
+          <a href="#LLM">
+            Large Language Model (LLM)
+          </a>  &emsp;
         
           <a href="#Large-scale Sales Forecast improvement Cycle">
             Large-scale Sales Forecast improvement Cycle
@@ -497,6 +501,39 @@
 
             <hr />
             <h1>AI SOLUTIONS</h1>
+
+            <!-- 18 Large Language Model -->
+            <a name="LLM"></a>
+
+            <div class="card">
+              <h2>Larege Language Model</h2>
+              <b>Solution:</b>
+              <p id="c17_1">
+                Large-scale Machine Learning end-to-end hand-on training (ETL, data cleaning, feature engineering, model experiment, model evaluation, model improvement, report)
+
+              </p>
+              <p id="c17_2">
+                Low cost and Secured Machine Learning Development Environment
+              </p>
+              <p id="c17_3">
+                Fast improving iteration process
+              </p> 
+              <p id="c17_4">
+                Client: Agriculture equipment & tools manufacturer
+
+              </p> 
+
+              <a
+                href="/contents_resources/images/Sales-Forecast-improvement-Cycle.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/Sales-Forecast-improvement-Cycle.png"
+                  width="270"
+              /></a>
+            </div>
+            <br />
+
 
             <!-- 17 Large-scale Sales Forecast improvement Cycle -->
             <a name="Large-scale Sales Forecast improvement Cycle"></a>
