--- a/skills.html
+++ b/skills.html
@@ -85,14 +85,8 @@
 			<header>
 				<div class="inner">
 					<h2>My Skill Set</h2>
-					<br>
-					<blockquote>"My working experience in 5 key roles."</blockquote>
-					<img src="./contents_resources/images/skillset.png" style="width:100%;" alt="" />
-					<br><br>
 				</div>
 			</header>
-
-			<!-- Content -->
 
 			<!-- Wrapper -->
 			<section id="wrapper">
@@ -100,107 +94,21 @@
 				<!-- One -->
 				<section id="one" class="wrapper spotlight style1">
 					<div class="inner">
-						<img src="images/data_analyst.png" style="width:150px;" alt="" />
 						<div class="content">
-							<h2 class="major">as Data Analyst</h2>
 							<p>
-								More than 10 years experience in BI(business intelligent) development to serve variouse
-								business needs including retail management, customer relationship management, marketing
-								analysis, production management, supply chain management, financial repot and more.
+								More than 15 years experience utilising DATA and AI for variouse industries 
+								including retail management, consumer goods, marketing analysis, 
+								production management, supply chain management, financial repot and more.
 							</p>
-							<p>Tools: Tableau and Power BI report</p>
-							<a href="projects.html" class="special">Learn more</a>
 						</div>
 					</div>
 				</section>
-
-				<!-- Two -->
-				<section id="two" class="wrapper alt spotlight style2">
-					<div class="inner">
-						<img src="images/data_scientist.png" style="width:150px;" alt="" />
-						<div class="content">
-							<h2 class="major">as Data Scientist</h2>
-							<p>
-								Create end-to-end dataflow for Machine learning devlopment from data preparation,
-								feature engineering, model creation, model evaluation. Maintain full process of machine
-								life cycle via DevOps process. Develop verious AI infrastructures including AIas, SaaS,
-								PaaS, IaaS, Edge deployment.
-							</p>
-							<p>
-								Tools: <br>
-								Python (Numpy, Pandas, Sklearn, Statsmodels, Tensorflow, Matplotlib)<br>
-								Azure (Azure ML Studio, Azure ML Service, AutoML, Cognitive Services-Speech, Vision,
-								Image, Language, Sentiment)<br>
-								Google (Google Colab) SparkML<br>
-								SPSS Statisitic, SPSS Modelor<br>
-								DevOps, MLflow, Azure ML Service
-							</p>
-							<a href="projects.html" class="special">Learn more</a>
-						</div>
-					</div>
-				</section>
-
-				<!-- Three -->
-				<section id="three" class="wrapper spotlight style3">
-					<div class="inner">
-						<img src="images/data_engineer.png" style="width:150px;" alt="" />
-						<div class="content">
-							<h2 class="major">as Data Engineer</h2>
-							<p>Develop ETL dataflow system in various infra-structure including on-premise, cloud,
-								hybrid and distributed compting.</p>
-							<p>SQL server, MySQL, Data Factory, Dataflows, Databricks </p>
-							<a href="projects.html" class="special">Learn more</a>
-						</div>
-					</div>
-				</section>
-
-				<!-- four -->
-
-				<section id="four" class="wrapper alt spotlight style4">
-					<div class="inner">
-
-						<img src="images/cloud_engineer.png" style="width:150px;" alt="" />
-						<div class="content">
-							<h2 class="major">as Cloud Engineer</h2>
-							<p>Design and build secured cloud structure to support BI and AI platform.</p>
-							<p>Azure (VM, Compute, App Service, Kubernetes Service,VNets, Blob Storage, SQL Database)
-							</p>
-							<p>Google (Cloud Storage, BigQuery)</p>
-							<a href="projects.html" class="special">Learn more</a>
-						</div>
-					</div>
-				</section>
-
-				<!-- Five -->
-
-				<section id="five" class="wrapper spotlight style5">
-					<div class="inner">
-						<img src="images/web_developer.png" style="width:150px;" alt="" />
-						<div class="content">
-							<h2 class="major">as Web Developer</h2>
-							<p>
-								UI, UX, and front-end web developing to achieve responsive designs for cohesive user
-								experience. <br>
-								Create statics website and CMS based website.
-							</p>
-							<p>
-								HTML, CSS, JS, React Native, CMS(Wordpress), Google Analytics, Marketing
-								Automation(Kairos3)<br>
-								Adobe Illustrator
-							</p>
-							<a href="projects.html" class="special">Learn more</a>
-						</div>
-					</div>
-				</section>
-
 
 				<!-- Size -->
 				<section id="two" class="wrapper alt spotlight style2">
 					<div class="inner">
 						<div class="content">
-							<img src="images/nutshell.png" style="width:100px;" alt="" />
 
-							<h2 class="major">In a Nutshell</h2>
 							<h1>Working Experience</h1>
 							<table class="alt">
 								<tbody>
@@ -209,7 +117,7 @@
 											<a href="https://www.worksid.co.jp/" target="_blank">
 												Works ID Co., Ltd. &#127760;</a> Japan <br>
 											Role: AI BI Cloud Developer<br>
-											4 years (Present)
+											5 years (Present)
 										</td>
 									</tr>
 									<tr>
