--- a/skills.html
+++ b/skills.html
@@ -85,6 +85,12 @@
 			<header>
 				<div class="inner">
 					<h2>My Skill Set</h2>
+					<p>
+						With over 15 years of experience utilizing DATA and AI 
+						across various industries, including retail management, 
+						consumer goods, marketing analysis, production management, 
+						supply chain management, financial reporting, and more.
+					</p>
 				</div>
 			</header>
 
@@ -93,15 +99,7 @@
 
 				<!-- One -->
 				<section id="one" class="wrapper spotlight style1">
-					<div class="inner">
-						<div class="content">
-							<p>
-								More than 15 years experience utilising DATA and AI for variouse industries 
-								including retail management, consumer goods, marketing analysis, 
-								production management, supply chain management, financial repot and more.
-							</p>
-						</div>
-					</div>
+
 				</section>
 
 				<!-- Size -->
@@ -457,7 +455,7 @@
 							</table>
 
 
-							<p>App・System</p>
+							<p>Tools</p>
 							<table class="alt">
 								<tbody>
 									<tr>
@@ -480,6 +478,34 @@
 											Kairos3 (Marketing Automation) ★ ★ ★ <span style="color: gray;">★ ★</span>
 											<br>
 										</td>
+									</tr>
+								</tbody>
+							</table>
+
+							<h1>🤖 AI DEMOs</h1>
+							<table class="alt">
+								<tbody>
+									<tr>
+										<td>
+											<a href="https://huggingface.co/spaces/jingwora/language-question-answering"
+												target="_blank"> Language: Contents Q&A</a> 
+											<br>
+											<a href="https://huggingface.co/spaces/jingwora/language-emotion-classification-jp"
+												target="_blank"> Language: Content Classification</a> 										
+											<br>
+											<a href="https://huggingface.co/spaces/jingwora/language-sentence-similarity"
+												target="_blank"> Language: Content Similarity</a> 										
+											<br>
+											<a href="https://huggingface.co/spaces/jingwora/voice-speech-sentiment"
+												target="_blank"> Language: Voice to Text to Sentiment</a>
+											<br>
+											<a href="https://huggingface.co/spaces/jingwora/vision-image-classification-interpretation"
+											target="_blank"> Image: Image Classification-Interpretation</a>
+											<br>
+											<a href="https://huggingface.co/spaces/jingwora/vision-sketch-recognition"
+											target="_blank"> Image: Sketch Image Classification</a>						
+
+                                        </td>
 									</tr>
 								</tbody>
 							</table>
