--- a/skills.html
+++ b/skills.html
@@ -488,7 +488,7 @@
 									<tr>
 										<td>
 											<a href="https://huggingface.co/spaces/jingwora/language-question-answering"
-												target="_blank"> Language: Contents Q&A</a> 
+												> Language: Contents Q&A</a> 
 											<br>
 											<a href="https://huggingface.co/spaces/jingwora/language-emotion-classification-jp"
 												target="_blank"> Language: Content Classification</a> 										
