--- a/skills.html
+++ b/skills.html
@@ -488,7 +488,10 @@
 									<tr>
 										<td>
 											<a href="https://huggingface.co/spaces/jingwora/language-question-answering"
-												> Language: Contents Q&A</a> 
+											    target="_blank"> Language: Contents Q&A</a> 
+											<br>	
+											<a href="https://huggingface.co/spaces/jingwora/language-summarize-multilang-mT5"
+											    target="_blank"> Language: Summarization multilang</a> 
 											<br>
 											<a href="https://huggingface.co/spaces/jingwora/language-emotion-classification-jp"
 												target="_blank"> Language: Content Classification</a> 										
@@ -503,8 +506,8 @@
 											target="_blank"> Image: Image Classification-Interpretation</a>
 											<br>
 											<a href="https://huggingface.co/spaces/jingwora/vision-sketch-recognition"
-											target="_blank"> Image: Sketch Image Classification</a>						
-
+											target="_blank"> Image: Sketch Image Classification</a>	
+											<br>
                                         </td>
 									</tr>
 								</tbody>
