--- a/skills.html
+++ b/skills.html
@@ -264,7 +264,7 @@
 
 											<img src="images/kaggle-expert-w@192.png" style="width:50px;" alt="" />
 											Competition Expert <br>
-											<font size="+2">RANK 856</font>
+											<font size="+2">Highest RANK 770</font>
 											<br> <br>
 
 											<div class="table-wrapper">
