--- a/projects.html
+++ b/projects.html
@@ -200,6 +200,8 @@
             Tableau: NLP Report
           </a>  &emsp;
 
+          ※ The provided sample reports have been intentionally simplified for illustrative purposes. However, it's important to note that actual reports are significantly more intricate and offer a wealth of deeper insights.
+
           <!-- One -->
 
           <div class="content" style="text-align: center;">
