--- a/skills.html
+++ b/skills.html
@@ -141,7 +141,10 @@
 							<a href="https://www.databricks.com/learn/certification/machine-learning-professional"
 								target="_blank">
 								<img src="images/Badges/professional-badge-ml.svg" style="width:110px;" alt="" /> </a>
-							<br><br>
+							<br>
+							Databricks Certified: Machine Learning Professional <br>
+							Earned on Nov 2022 <br>
+							Expires on Nov 2024 <br>
 
 							<a href="https://learn.microsoft.com/ja-jp/certifications/azure-enterprise-data-analyst-associate/"
 								target="_blank">
