--- a/skills.html
+++ b/skills.html
@@ -143,8 +143,8 @@
 								<img src="images/Badges/professional-badge-ml.svg" style="width:110px;" alt="" /> </a>
 							<br>
 							Databricks Certified: Machine Learning Professional <br>
-							Earned on Nov 2022 <br>
-							Expires on Nov 2024 <br>
+							Earned on October 31, 2022 <br>
+							Expires on October 31, 2024 <br>
 
 							<a href="https://learn.microsoft.com/ja-jp/certifications/azure-enterprise-data-analyst-associate/"
 								target="_blank">
