--- a/tutorials.html
+++ b/tutorials.html
@@ -185,8 +185,7 @@
 									Pysaprk: Python API for Spark (distributed framework)
 									 that can handle Big Data analysis.
 									 <br>
-									 <a href="contents\tutorial\databricks\databricks.html" target="_blank">
-									 CODE</a>
+									 IN PROGRESS
 								</td>
 							</tr>
 						</tbody>
