--- a/projects-jp.html
+++ b/projects-jp.html
@@ -310,7 +310,7 @@
               <h2>顧客の旅路全体にわたる感情分析</h2>
               <b>ソリューション:</b>
               <p id="c10_1">
-                旅路全体での感情マッピング: 顧客の旅路の各段階での感情を把握し、感情に共感する対応を可能にする洞察を得ます。                Gain insights into customer emotions at each stage of their journey, enabling tailored responses that resonate with their feelings.
+                旅路全体での感情マッピング: 顧客の旅路の各段階での感情を把握し、感情に共感する対応を可能にする洞察を得ます。  
               </p>
               <p id="c10_2">
                 より深い不満分析: 不満の根本原因に深く入り込み、顧客満足度を大幅に向上させ、精密な対応で課題に対処します。
