--- a/skills.html
+++ b/skills.html
@@ -146,34 +146,35 @@
 							Earned on October 31, 2022 <br>
 							Expires on October 31, 2024 <br>
 
-							<a href="https://learn.microsoft.com/ja-jp/certifications/azure-enterprise-data-analyst-associate/"
+							<a href="https://learn.microsoft.com/ja-jp/certifications/azure-ai-engineer/"
 								target="_blank">
-								<img src="images/Badges/CERT-Associate-Data-Analyst-600x600.png" style="width:130px;"
-									alt="" /> 
-							</a> 
+								<img src="images/Badges/azure-ai-engineer-600x600.png" style="width:130px;" alt="" />
+							</a>
 							<br>
-							Microsoft Certified: Power BI Data Analyst Associate <br>
-							Earned on May 8, 2021 <br>
-							Expires on May 9, 2024 <br>
-									
+							AI-102 | Microsoft Certified | Azure AI Engineer Associate <br>
+							Earned on April 24, 2021 <br>
+							Expires on November 13, 2024  <br>
+
+
 							<a href="https://learn.microsoft.com/ja-jp/certifications/azure-data-scientist/"
 								target="_blank">
 								<img src="images/Badges/azure-data-scientist-associate-600x600.png" style="width:130px;"
 									alt="" /> 
 							</a>
 							<br>
-							Microsoft Certified: Azure Data Scientist Associate <br>
+							DP-100 | Microsoft Certified | Azure Data Scientist Associate <br>
 							Earned on April 24, 2021 <br>
 							Expires on November 13, 2024  <br>
 
-							<a href="https://learn.microsoft.com/ja-jp/certifications/azure-ai-engineer/"
+							<a href="https://learn.microsoft.com/ja-jp/certifications/azure-enterprise-data-analyst-associate/"
 								target="_blank">
-								<img src="images/Badges/azure-ai-engineer-600x600.png" style="width:130px;" alt="" />
-							</a>
+								<img src="images/Badges/CERT-Associate-Data-Analyst-600x600.png" style="width:130px;"
+									alt="" /> 
+							</a> 
 							<br>
-							Microsoft Certified: Azure AI Engineer Associate <br>
-							Earned on April 24, 2021 <br>
-							Expires on November 13, 2024  <br>
+							PL-300 | Microsoft Certified | Power BI Data Analyst Associate <br>
+							Earned on May 8, 2021 <br>
+							Expires on May 9, 2024 <br>
 
 							<br><br>
 							<img src="images/Badges/azure-fundamentals-600x600 (1).png" style="width:100px;" alt="" />
