--- a/skills.html
+++ b/skills.html
@@ -112,10 +112,18 @@
 								<tbody>
 									<tr>
 										<td>
+											<a href="https://www.avanade.com/ja-jp" target="_blank">
+												Avanade Japan KK. &#127760;</a> <br>
+											Role: Software Engineer (Gen AI)<br>
+											1 years (Present)
+										</td>
+									</tr>
+									<tr>
+										<td>
 											<a href="https://www.worksid.co.jp/" target="_blank">
 												Works ID Co., Ltd. &#127760;</a> Japan <br>
 											Role: AI BI Cloud Developer<br>
-											5 years (Present)
+											5 years
 										</td>
 									</tr>
 									<tr>
