--- a/skills.html
+++ b/skills.html
@@ -306,6 +306,20 @@
 
 														<tr>
 															<td>
+																<img src="images/kaggle-silver.png"
+																	style="width:30px;" alt="" />
+																<br> Bronze
+																<br> 2024/01
+															</td>
+															<td>
+																<a href="https://www.kaggle.com/competitions/llm-detect-ai-generated-text"
+																	target="_blank">
+																	LLM - Detect AI Generated Text
+																	&#127760;</a>
+																(Identify which essay was written by a large language model)
+																<br> [NLP] [Text Classification - English]
+															</td>
+															<td>
 																<img src="images/kaggle-bronzel@1x.png"
 																	style="width:30px;" alt="" />
 																<br> Bronze
