--- a/skills.html
+++ b/skills.html
@@ -308,7 +308,7 @@
 															<td>
 																<img src="images/kaggle-silver.png"
 																	style="width:30px;" alt="" />
-																<br> Bronze
+																<br> Silver
 																<br> 2024/01
 															</td>
 															<td>
@@ -319,6 +319,9 @@
 																(Identify which essay was written by a large language model)
 																<br> [NLP] [Text Classification - English]
 															</td>
+														</tr>
+
+														<tr>
 															<td>
 																<img src="images/kaggle-bronzel@1x.png"
 																	style="width:30px;" alt="" />
