--- a/skills.html
+++ b/skills.html
@@ -114,7 +114,7 @@
 										<td>
 											<a href="https://www.avanade.com/ja-jp" target="_blank">
 												Avanade Japan KK. &#127760;</a> <br>
-											Role: Software Engineer (Gen AI)<br>
+											Role: Software Engineer (Data & AI)<br>
 											1 years (Present)
 										</td>
 									</tr>
@@ -122,7 +122,7 @@
 										<td>
 											<a href="https://www.worksid.co.jp/" target="_blank">
 												Works ID Co., Ltd. &#127760;</a> Japan <br>
-											Role: AI BI Cloud Developer<br>
+											Role: Senior Data and AI Specialist<br>
 											5 years
 										</td>
 									</tr>
@@ -483,17 +483,20 @@
 											<p style="color: skyblue;"> Data processing, Visualization, Machine
 												Learning, Web scrapping</p>
 
-											PySpark ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											Javascript ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
+											<p style="color: skyblue;"> Frontend web development, Next.js</p>
+
+											PySpark ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
 											<p style="color: skyblue;"> Big Data: Data Engineer, Data Science, MLOps</p>
 
 											R ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
 											<p style="color: skyblue;"> Statistical analysis, Visualization</p>
 
-											C ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
 											SQL ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											C ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
+											C# ★ ★ ★ <span style="color: gray;"> ★ ★</span> <br>
 											HTML ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
 											CSS ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
-											JavaScript ★ ★ ★ <span style="color: gray;"> ★ ★</span>
 									</tr>
 								</tbody>
 							</table>
@@ -516,6 +519,18 @@
 											<b>Database</b> <br>
 											SQL Server ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
 											My SQL ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
+											PostgreSQL ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
+											<br>
+											<b>Azure and tools</b> <br>
+											<b>Data Integration:</b> Synapse Analytics, Data factory, Databricks <br>
+											<b>Compute:</b>  VM, Azure Functions, Azure App Service, Azure Container Instances, Azure Container App <br>
+											<b>Storage:</b> Sharepoint, Blob Storage, Files Storage, Queue Storage, Data Lake Storage <br>
+											<b>Database:</b> SQL Server, MySQL, PostgreSQL <br>
+											<b>Productivity:</b> Power BI, Power App, Power Automation <br>
+											<b>Development tools:</b> VC Code, Git, Github, Azure DevOps, Docker, Azure Container Registry <br>
+											<b>AI:</b> Azure Open AI Service, Azure AI Search, Azure Cognitive Service, Azure AI Document Intelligence<br>
+											<b>MLOps:</b> Azure Machine Learning, MLFlow<br>
+						
 											<br>
 											<b>Tools</b> <br>
 											Wordpress (CMS) ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
